modules/example: Add example module with add and subtract function.

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,10 @@ build-*/
 ######################
 tests/results/*
 
+# Virtual env directory
+#######################
+venv/
+
 # Python cache files
 ######################
 __pycache__/
